feat: Implemente /patients/register endpoint
